--- a/Uczenie maszynowe semestr 5/Lista 3/sieci_splotowe_pytorch.ipynb
+++ b/Uczenie maszynowe semestr 5/Lista 3/sieci_splotowe_pytorch.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 36,
    "id": "a00f8d6e",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 37,
    "id": "c130de48",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 38,
    "id": "17c5b81a",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 39,
    "id": "c8dc8e40",
    "metadata": {},
    "outputs": [],
@@ -157,18 +157,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98c85431",
-   "metadata": {},
-   "source": [
-    "Setting seed"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "c6632ac5",
    "metadata": {},
    "source": [
-    "Dlaczego ELU a nie RELU - ELU  pomaga w problemie zanikających i wybuchających gradientów oraz  wymierających neuronów\n"
+    "Dlaczego ELU a nie RELU - ELU wymierających neuronów\n"
    ]
   },
   {
@@ -200,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "dbaddf07",
    "metadata": {},
    "outputs": [],
@@ -261,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "0898d677",
    "metadata": {},
    "outputs": [],
@@ -332,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "34ebeffa",
    "metadata": {},
    "outputs": [],
@@ -402,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 43,
    "id": "94feff99",
    "metadata": {},
    "outputs": [],
@@ -415,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 46,
    "id": "8bb3f6e6",
    "metadata": {},
    "outputs": [],
@@ -426,7 +418,7 @@
     "optimizer2 = optim.Adam(net2.parameters(), lr=0.001)\n",
     "optimizer3 = optim.Adam(net3.parameters(), lr=0.001)\n",
     "\n",
-    "for epoch in range(10):\n",
+    "for epoch in range(20):\n",
     "    for images, labels in dataloader_train:\n",
     "        optimizer1.zero_grad()\n",
     "        optimizer2.zero_grad()\n",
@@ -447,29 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
-   "id": "1fbb560a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "metric_precision = Precision(\n",
-    "    task = \"multiclass\",\n",
-    "    num_classes=7,\n",
-    "    average=\"macro\"\n",
-    "    )\n",
-    "\n",
-    "metric_recall = Recall(\n",
-    "    task = \"multiclass\",\n",
-    "    num_classes=7,\n",
-    "    average=\"macro\"\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 47,
    "id": "82ad1e7a",
    "metadata": {},
    "outputs": [
@@ -477,9 +447,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "net1 acc: 0.7386831045150757\n",
-      "net2 acc: 0.8168724179267883\n",
-      "net3 acc: 0.7386831045150757\n"
+      "net1 acc: 0.7181069850921631\n",
+      "net2 acc: 0.7860082387924194\n",
+      "net3 acc: 0.7551440596580505\n"
      ]
     }
    ],
@@ -507,6 +477,14 @@
     "print(\"net2 acc:\", a2)\n",
     "print(\"net3 acc:\", a3)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25363770",
+   "metadata": {},
+   "source": [
+    "Ważna notka, sieć dobrze działą ze sztucznym transfer learningiem, po pierwszym uczeniu wyniki są słąbe, ale po drugim uczeniu bez tworzenia nowej sieci tylko uczenie <br> na starych accuraccy skacze do ok 80%"
    ]
   }
  ],
